hiding the trumpet filter tag for the listen filters. Changed z-index for add-to-cart modal to make sure it is on top of everything.

--- a/site-style.css
+++ b/site-style.css
@@ -1,3 +1,4 @@
 .w-commerce-commercecartcontainerwrapper--cartType-modal {
 	height: 100dvh;
+	z-index: 1000;
 }
